--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -9,10 +9,10 @@
                         <a th:href="@{/api/assetbundles/bundleList}">창업아이템</a>
                     </li>
                     <li sec:authorize="isAuthenticated()">
-                        <a th:href="@{/api/assetbundles/uploadForm}">번들 등록</a>
+                        <a th:href="@{/api/assetbundles/uploadForm}">부스 등록</a>
                     </li>
                     <li sec:authorize="hasRole('ROLE_ADMIN')">
-                        <a th:href="@{/api/assetbundles/admin/bundleList}">Bundle서버 관리</a>
+                        <a th:href="@{/api/assetbundles/admin/bundleList}">번들서버 관리</a>
                     </li>
                     <li sec:authorize="hasRole('ROLE_ADMIN')">
                         <a th:href="@{/admin/pendingBundles}">번들 승인 대기</a>
@@ -24,6 +24,12 @@
             <input type="text" class="search-input" placeholder="아이템 이름과 등록자 이름으로 검색하세요." />
         </div>
         <div class="vsp-header-right">
+<!--            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">-->
+<!--                <li class="nav-item"><a class="nav-link" th:href="@{/#service}">서비스 소개</a></li>-->
+<!--                <li class="nav-item"><a class="nav-link" th:href="@{/#howto}">사용 방법</a></li>-->
+<!--                <li class="nav-item"><a class="nav-link" th:href="@{/#faq}">자주 묻는 질문</a></li>-->
+<!--                <li class="nav-item"><a class="nav-link" th:href="@{/#contact}">문의하기</a></li>-->
+<!--            </ul>-->
             <a th:href="@{/login}" sec:authorize="isAnonymous()" class="login-button">로그인</a>
             <div sec:authorize="isAuthenticated()" class="user-dropdown">
                 <div class="user-avatar" onclick="toggleDropdown()">
