--- a/src/main/resources/templates/fragments/sidebar_user.html
+++ b/src/main/resources/templates/fragments/sidebar_user.html
@@ -9,6 +9,7 @@
     </div>
     <nav class="sidebar-menu">
         <a th:href="@{/dashboard/user/profile}" class="sidebar-menu-item">내 정보</a>
+        <a th:href="@{/dashboard/user/approvedBundles}" class="sidebar-menu-item">승인된 번들</a>
         <a th:href="@{/dashboard/user/uploadedBundles}" class="sidebar-menu-item">번들 요청 내역</a>
         <a th:href="@{/dashboard/user/fundedBundles}" class="sidebar-menu-item">펀딩한 번들</a>
         <a th:href="@{/dashboard/user/myPosts}" class="sidebar-menu-item">작성한 게시글</a>
