--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -14,10 +14,16 @@
 <!--            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"-->
 <!--            rel="stylesheet"-->
 <!--    />-->
+<!--    <link-->
+<!--            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"-->
+<!--            rel="stylesheet"-->
+<!--            crossorigin="anonymous"-->
+<!--    />-->
     <link
-            href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
             rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css"
     />
+
     <link rel="stylesheet" type="text/css" th:href="@{/css/header.css}">
 </head>
 </html>
